# InvestorInsights

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.docs_legacy/docs.v2/: system_specification.md
.docs_legacy/docs.v2/appendices/: appendix-b-xbrl-tag-mapping.md  appendix-c-sec-filing-sections.md  appendix-d-default-analysis-profile.md  appendix-f-makefile.md  testing-strategy-detailed.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .dockerignore  Dockerfile  _validate_t010.py  _validate_t011.py  alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_hot_path_indexes.py
backend/app/: config.py  dependencies.py  main.py
backend/app/analysis/: __init__.py  engine.py  expression_parser.py  formulas.py  scorer.py  trend.py
backend/app/api/: analysis.py  chat.py  companies.py  documents.py  financials.py  health.py  pagination.py  router.py  tasks.py
backend/app/clients/: circuit_breaker.py  openai_client.py  qdrant_client.py  redis_client.py  sec_client.py  storage_client.py
backend/app/db/: session.py
backend/app/ingestion/: chunker.py  embedder.py  pipeline.py  section_splitter.py
backend/app/models/: __init__.py  base.py  chunk.py  company.py  criterion.py  document.py  financial.py  message.py  profile.py  result.py  section.py  session.py
backend/app/observability/: logging.py  metrics.py
backend/app/rag/: chat_agent.py  prompt_builder.py
backend/app/schemas/: __init__.py  analysis.py  chat.py  common.py  company.py  document.py  financial.py
backend/app/scripts/: __init__.py  seed_defaults.py
backend/app/services/: analysis_service.py  chat_service.py  (+4 more)
backend/tests/: conftest.py  factories.py
docs/: db-tuning-review.md  developer-guide.md  docker-image-review.md  final-implementation-report.md  system_specification.md  user-guide.md
docs/appendices/: appendix-a-builtin-formulas.md  appendix-e-project-structure.md  appendix-f-makefile.md  database-schema-ddl.md  testing-strategy-detailed.md
docs/runbooks/: budget-breach.md
docs_legacy/: initi_prompt_for_spec.txt
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/tests/: setup.ts
infra/: main.bicep
infra/dashboards/: README.md  operations.json
infra/modules/: alerts.bicep  app-insights.bicep  container-apps.bicep  container-registry.bicep  key-vault.bicep  log-analytics.bicep  networking.bicep  openai.bicep  postgresql.bicep  redis.bicep  resource-group.bicep  storage.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam
infra/scripts/: deploy.sh  destroy.sh  seed-keyvault.sh
scripts/: reset.sh  retry_failed_docs.py  seed.sh  setup.sh
specs/001-investorinsights-platform/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+99 files in other folders)
